# cp

./: .gitignore  CMakeLists.txt  Notes.txt  README.md  index.md  reformat.py  reformat.py.md  run.template  submission.template  task.template
.verify-helper/: config.toml  timestamps.remote.json
output/: main.cpp
testrunner/: main.cpp
tests/: pollards_rho_factorization_tests.cpp
verification/: verification.template
verification/data_structures/: segment_tree_add_sum.test.cpp  segment_tree_add_sum.test.cpp.md  segment_tree_affine.test.cpp  segment_tree_affine.test.cpp.md  segment_tree_composite.test.cpp  segment_tree_composite.test.cpp.md
verification/graph/: heavy_light_decomposition.test.cpp  heavy_light_decomposition.test.cpp.md  heavy_light_decomposition_path.test.cpp  heavy_light_decomposition_path.test.cpp.md  heavy_light_decomposition_subtree.test.cpp  heavy_light_decomposition_subtree.test.cpp.md
verification/numerical/factors/: optimized_rho_factorization.test.cpp  optimized_rho_factorization.test.cpp.md  pollards_rho_factorization.test.cpp  pollards_rho_factorization.test.cpp.md
